[gd_scene load_steps=9 format=3 uid="uid://c6b1rnteoo8gx"]

[ext_resource type="Script" path="res://enemy/slime.gd" id="1_irsk3"]
[ext_resource type="Texture2D" uid="uid://8k7oj7b1cex6" path="res://enemy/slime.png" id="2_aou3k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hc7wf"]
size = Vector2(16, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnbuo"]
atlas = ExtResource("2_aou3k")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_45umo"]
atlas = ExtResource("2_aou3k")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8wg16"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnbuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45umo")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lue7u"]
size = Vector2(16, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1xm1y"]
size = Vector2(128, 64)

[node name="Slime" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_irsk3")

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_hc7wf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8wg16")
autoplay = "default"
frame_progress = 0.345001

[node name="raycastright" type="RayCast2D" parent="."]
target_position = Vector2(8.1, 0)

[node name="raycastleft" type="RayCast2D" parent="."]
target_position = Vector2(-8.1, 0)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_lue7u")

[node name="Jump" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="LeftPlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftPlayerDetector"]
position = Vector2(-64, 0)
shape = SubResource("RectangleShape2D_1xm1y")

[node name="RightPlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightPlayerDetector"]
position = Vector2(64, 0)
shape = SubResource("RectangleShape2D_1xm1y")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="Jump" to="." method="_on_jump_timeout"]
[connection signal="body_entered" from="LeftPlayerDetector" to="." method="_on_left_player_detector_body_entered"]
[connection signal="body_exited" from="LeftPlayerDetector" to="." method="_on_left_player_detector_body_exited"]
[connection signal="body_entered" from="RightPlayerDetector" to="." method="_on_right_player_detector_body_entered"]
[connection signal="body_exited" from="RightPlayerDetector" to="." method="_on_right_player_detector_body_exited"]
